--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,13 +10,21 @@
             <h1 style="text-align: center"> Brandon Roberts </h1>
         </span>
         <span>
-            <a style="text-align: right" mat-button href="assets/Brandon Roberts Resume.pdf"> Resume </a>
+            <a mat-button color="primary" href="https://github.com/BigGlasses" target="_blank">
+                <mat-icon fontSet="fab" fontIcon="fa-github"></mat-icon>
+            </a>
+            <a mat-button color="primary" href="https://www.linkedin.com/in/brandonnickroberts/" target="_blank">
+                <mat-icon fontSet="fab" fontIcon="fa-linkedin"></mat-icon>
+            </a>
+            <a mat-button color="primary" href="https://www.hackerrank.com/TastyCereal" target="_blank">
+                <mat-icon fontSet="fab" fontIcon="fa-hackerrank"></mat-icon>
+            </a>
         </span>
     </mat-toolbar>
 
     <mat-sidenav-container [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
 
-        <mat-sidenav #snav class="leftCol" [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
+        <mat-sidenav #snav [(opened)]="opened" class="leftCol" [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
             fixedTopGap="56">
             <h2>Projects</h2>
             <mat-list *ngFor="let projectYear of projectsByYear">
@@ -29,6 +37,15 @@
             </mat-list>
         </mat-sidenav>
         <mat-sidenav-content>
+                <div class="projectYearDiv" style="margin-top: 0;" [class]="mobileQuery.matches ? 'projectYearDiv project' : 'projectYearDiv pcproject'">
+                    <h1> Development Corner </h1>
+                    <h3>  Who am I? </h3>
+                    <p style="color: grey"> A passionate coder who enjoys learning new ways to code and making games. </p>
+                    <h3>  What am I working on right now? </h3>
+                    <p style="color: grey"> Finishing up my Software Engineering bachelor's degree, and working on as many side projects as possible before I go full-time at Microsoft. </p>
+                    <h3>  What can you find here? </h3>
+                    <p style="color: grey"> Many of favourite projects that I enjoyed working on! Some even have source code! </p>
+                    </div>
             <ng-container *ngFor="let projectYear of projectsByYear">
                 <div class="projectYearDiv">
                     <mat-divider></mat-divider>
@@ -43,11 +60,11 @@
                                 <mat-chip *ngFor="let item of project.stack">{{item}}</mat-chip>
                             </mat-chip-list>
                             <div class="project-image-gallery">
-                                <mdb-carousel class="carousel slide" [interval]="'0'" [animation]="'slide'">
+                                <mdb-carousel class="carousel slide project-image-gallery" [interval]="'0'" [animation]="'slide'">
                                     <ng-container>
                                         <mdb-carousel-item *ngFor="let imgSrc of project.imageSources">
                                             <div class="view w-100">
-                                                <img class="d-block project-image align-center" [src]="imgSrc" alt="First slide">
+                                                <img class="d-block align-center" [class]="mobileQuery.matches ? 'mobile-project-image' : 'project-image'" [src]="imgSrc">
                                                 <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
                                             </div>
                                         </mdb-carousel-item>
@@ -78,5 +95,16 @@
         </mat-sidenav-content>
     </mat-sidenav-container>
 </div>
+<!-- Footer -->
+<footer class="page-footer font-small blue fixed-bottom">
 
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">
+            <a style="text-align: left" mat-button href="https://github.com/BigGlasses/Site2019"> View this site on GitHub </a>
+            <a style="text-align: right" mat-button href="assets/Brandon Roberts Resume.pdf"> View My Resume </a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
 <router-outlet></router-outlet>
