--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -36,7 +36,7 @@
     margin : auto;
 
     max-width: 100%;
-    height: 600px;
+    height: 500px;
     vertical-align: middle;
 }
 .mobile-project-image{
@@ -88,8 +88,8 @@
 .pcproject {  
     padding-bottom: 1cm;
     padding-top: 1cm;
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 25%;
+    padding-right: 25%;
 }
 
 .whoami{
@@ -100,4 +100,5 @@
     color: white;
     vertical-align: center;
     font-size: 24px;
+    margin-right: 10px;
 }
